# coreason-signal

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  debug_lancedb.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  product_requirements.md  requirements.md  usage.md
src/coreason_signal/: __init__.py  api.py  config.py  main.py  schema.py  schemas.py  service.py
src/coreason_signal/edge_agent/: reflex_engine.py  vector_store.py
src/coreason_signal/sila/: features.py  server.py
src/coreason_signal/soft_sensor/: engine.py
src/coreason_signal/streaming/: flight_server.py
src/coreason_signal/twin/: syncer.py
src/coreason_signal/utils/: logger.py
tests/: conftest.py  test_api.py  test_complex_scenarios.py  test_concurrency_watchdog.py  test_edge_agent_reflex_engine.py  test_edge_agent_vector_store.py  test_flight_server.py  test_integration_smoke.py  test_logger_init.py  test_main.py  test_reflex_engine.py  test_schema.py  test_schemas.py  test_schemas_complex.py  test_service.py  test_sila_complex_scenarios.py  test_sila_features.py  test_sila_server.py  test_soft_sensor_engine.py  test_soft_sensor_provider.py  test_soft_sensor_provider_complex.py  test_twin_complex.py  test_twin_syncer.py  test_utils.py
tests/libs/coreason_identity/: models.py  types.py
